# Cilantro

./: .gitignore  Cargo.toml  README.md  compile-wasm.sh  lib.wat
examples/: arith.txt  conditionals.txt  fib.txt  fibonacci.txt  funcs.txt  functions.txt  math.txt  scope.txt  string.txt  syntax-error.txt  tokenization error.txt  type error.txt
js-pkg/: README.md  cilantro.js  package.json
src/: cilantro.rs  codegen.rs  common.rs  lexer.rs  lib.rs  main.rs  parser.rs  semantics.rs  stdlib.rs  visualizer.rs
src/cilantro/: codegen.rs  common.rs  grammar.rs  lexer.rs  parser.rs  public.rs  semantics.rs  stdlib.rs  visualizer.rs
src/cilantro/codegen/: gen.rs  lib.rs
src/cilantro/common/: grammar.rs
src/cilantro/parser/: table.rs
src/cilantro/semantics/: extract.rs  scope.rs  trim.rs  type_check.rs
src/codegen/: gen.rs
src/common/: grammar.rs
src/parser/: table.rs
src/semantics/: extract.rs  scope.rs  trim.rs  type_check.rs
web/: animations.css  index.html  lib-getter.js  output.css  port.js  style.css
