[package]
name = "cilantro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.2"
# wasmtime = "12.0.1"
# wasmtime-wasi = "12.0.1"
wasm-bindgen = "0.2.87"

